<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wordbook.NewWordFragment">


    <EditText
        android:id="@+id/fragment_new_word_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_word"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fragment_new_word_translation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/hint_translation"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/fragment_new_word_value"
        app:layout_constraintStart_toStartOf="@+id/fragment_new_word_value"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_word_value" />

    <Button
        android:id="@+id/dialog_new_word_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="@+id/fragment_new_word_translation"
        app:layout_constraintTop_toTopOf="@+id/dialog_new_word_cancel" />

    <Button
        android:id="@+id/dialog_new_word_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/button_cancel"
        app:layout_constraintStart_toStartOf="@+id/fragment_new_word_translation"
        app:layout_constraintTop_toBottomOf="@+id/fragment_new_word_translation" />

</androidx.constraintlayout.widget.ConstraintLayout>